🔨 Fix in registered-in-province
